--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,7 +2,7 @@ body{
   font-family: "Poppins", "Segoe UI", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.6;
-  color: #222;
+  color: #a585ad;
 }
 
 h1 {
@@ -233,3 +233,182 @@ p {
   padding: 12px;      
   border: 1px solid #a18f8f;
 }
+
+
+
+@keyframes move {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(100px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+h1 {
+  animation: move 1.5s;
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.profile-image {
+  animation: fadein 4s;
+}
+
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+#preloader {
+  width: 100px;
+  height: 100px;
+
+  border: 8px solid #ffffff;
+  border-right-color: #12186d;
+  border-left-color: #0c0d68;
+  border-radius: 70%;
+
+  animation: spinner 1s linear infinite;
+  margin: 100px auto;
+}
+
+
+@media (prefers-reduced-motion: reduce) {
+  #preloader {
+    animation: none; 
+  }
+  .profile-image {
+  animation: none;
+  }
+
+  h1 {
+  animation: none;
+  }
+}
+  
+
+
+.services {
+  padding: 80px 20px;
+  color: white;
+  text-align: center;
+
+
+  background: linear-gradient(120deg, #3fb53f, #2196f3, #d40000);
+  background-size: 300% 300%;
+
+
+  animation: gradientMove 10s ease infinite;
+}
+
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.about {
+  position: relative;
+}
+
+.shape {
+  position: absolute;
+}
+
+.square {
+  width: 80px;
+  height: 80px;
+  background: #ff6f61;
+  top: 70%;
+  right: 60%;
+  animation: rotateShape 6s linear infinite;
+}
+
+
+.circle {
+  width: 100px;
+  height: 100px;
+  background: #42a5f5;
+  border-radius: 50%;
+  top: 80%;
+  right: 80%;
+  animation: scaleShape 4s ease-in-out infinite;
+}
+
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  top: 80%;
+  border-bottom: 90px solid #26c6da;
+
+  animation: floatShape 5s ease-in-out infinite;
+}
+
+
+@keyframes rotateShape {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+@keyframes scaleShape {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+}
+
+
+@keyframes floatShape {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(20px, -30px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+
+
+
+
+
+
+
+
+
